<resources>

    <string name="adview_banner_home_footer" translatable="false">ca-app-pub-8907881762519005/3104804902</string>
    <string name="adview_interstitial_ad_key" translatable="false">ca-app-pub-8907881762519005/4884914148</string>


    <string name="tab_ui_collection" translatable="false">Components</string>
    <string name="tab_features" translatable="false">FEATURES</string>
    <string name="tab_application" translatable="false">APPS</string>
    <string name="tab_feature_request" translatable="false">Feature Request</string>
    <string name="tab_about_us" translatable="false">About Us</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="message__want_to_quit" translatable="false">Do you really want to quit?</string>

    <string name="dummy_paragraph" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis facilisis, velit eget dapibus malesuada, massa eros condimentum mi, in pulvinar dui sapien at mi. Aenean porttitor vitae elit vitae sagittis. Nullam porta mauris eget libero ornare maximus. Curabitur vehicula quam vel pulvinar efficitur. Donec ultricies sapien vitae auctor congue. Suspendisse posuere malesuada augue nec sodales. Etiam ut erat massa. Integer gravida justo eu elit ornare ultrices. Curabitur augue dui, dapibus vel luctus eu, pellentesque quis erat. Suspendisse elementum justo vitae ante dapibus, et dignissim metus iaculis. Nam nec condimentum dolor, sodales scelerisque lacus. Suspendisse placerat facilisis felis id rutrum. Praesent posuere nulla id tellus tristique rutrum.\n\nDonec vitae sem malesuada, mollis velit et, faucibus erat. Suspendisse et rhoncus velit, non vestibulum erat. Maecenas a posuere diam. Curabitur cursus pharetra lacus, et euismod nisi pellentesque eu. Maecenas finibus dui scelerisque ipsum lacinia viverra. Donec eros risus, placerat id leo eget, sodales congue augue. Nullam tincidunt neque eu tellus varius facilisis. Proin sit amet mi eu sem scelerisque euismod eget sed lectus. Duis sed ante a magna tempor luctus eget in ex. Maecenas ligula arcu, tincidunt eu iaculis vitae, euismod vitae ex. Sed mollis pretium turpis, eu hendrerit eros interdum et. Pellentesque fermentum magna nec tellus ullamcorper dapibus. Fusce et vulputate tellus.\n\nDonec sem lorem, mollis tincidunt interdum non, convallis eget lacus. In imperdiet diam condimentum ex mattis efficitur. In in tellus vitae urna ultrices molestie. Fusce ac elementum ante. Sed porttitor rutrum interdum. Etiam tellus diam, hendrerit ut tellus quis, malesuada consectetur felis. Aliquam fermentum sapien ipsum, id hendrerit lorem rhoncus vitae. In hac habitasse platea dictumst.
    </string>
    <string name="dummy_text1" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur ligula et eros pulvinar viverra. Morbi eu orci nulla. Duis porttitor mauris quis diam imperdiet, a porta diam sagittis. Suspendisse rutrum accumsan lectus et vestibulum. Donec vel est erat. Donec id sollicitudin quam, ut sollicitudin velit. Nulla at libero vitae urna fringilla porttitor sit amet vitae ligula. Duis ac mattis purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi congue, nisl eget tincidunt commodo, purus lacus dignissim massa, eu maximus ex ex sed lectus. Mauris dapibus enim ac ex tempor lobortis. Pellentesque at dolor nec dolor bibendum consectetur non ut libero.
    </string>
    <string name="dummy_text_title" translatable="false">
        Lorem ipsum dolor sit amet.
    </string>

    <string name="dummy_medium_text" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <string name="dummy_small_text" translatable="false">
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>


    <!-- Shrine backdrop menu labels -->
    <string name="home5_all" translatable="false">ALL</string>
    <string name="home5_brands" translatable="false">BRANDS</string>
    <string name="home5_trending" translatable="false">TRENDING</string>
    <string name="home5_recommended" translatable="false">RECOMMENDED</string>
    <string name="home5_women" translatable="false">WOMEN</string>
    <string name="home5_men" translatable="false">MEN</string>
    <string name="shr_account_label" translatable="false">MY ACCOUNT</string>

    <string name="key_binding_default_toolbar_name" translatable="false">Modal-Toolbar-Title</string>


    <string name="app_name">Stock Count</string>
    <string name="date">Date</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--<Main Activity>-->
    <string name="master">Master</string>
    <string name="total_items">Total Items</string>
    <string name="total_qty">Total Qty</string>
    <string name="update_date">Updated Dt</string>
    <string name="transaction">Transaction</string>
    <string name="new_item">New Item</string>
    <string name="last_date">Last Scan Dt</string>
    <string name="change_lan">Change Language</string>
    <string name="item_code">Item Code</string>

    <!--<Drawer Menu Setting>-->
    <string name="input">Import Master</string>
    <string name="scan">Scan</string>
    <string name="export">Export</string>
    <string name="search">Search</string>
    <string name="language">Change Language</string>
    <string name="clear">Clear Data</string>
    <string name="exit">Exit</string>

    <!--<Drawer Menu Setting>-->
    <string name="location">Location</string>
    <string name="item">Item</string>
    <string name="qty">QTY</string>

    <!--<Drawer Menu Setting>-->
    <string name="barcode">Barcode</string>
    <string name="description">Description</string>

    <!--<Bottom Nav Bar>-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close1">Close</string>


    <!--<Are you sure?>-->
    <string name="sure">Are you sure?</string>

    <!--<All information is required>-->
    <string name="info">All information is required</string>

    <!--<Please Open Master File>-->
    <string name="open_master">Please Open Master File</string>


    <!--<Choose Language>-->
    <string name="c_language">Choose Language</string>
    <string name="english">English</string>
    <string name="thai">Thai</string>
    <string name="myanmar">Myanmar</string>

    <!--<Choose Database>-->
    <string name="c_data">Choose Database</string>
    <string name="master1">Master</string>
    <string name="tran">Transaction</string>
    <string name="all">All</string>


</resources>
