<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_import"
                android:icon="@mipmap/open_file"
                android:title="@string/input"/>

        <item
                android:id="@+id/nav_new"
                android:icon="@mipmap/barcode"
                android:title="@string/scan"/>

        <item
                android:id="@+id/nav_export"
                android:icon="@mipmap/baseline_save_alt_black_24dp"
                android:title="@string/export"/>

        <item
                android:id="@+id/nav_search"
                android:icon="@mipmap/baseline_search_black_24dp"
                android:title="@string/search"/>

        <item
                android:id="@+id/nav_lan"
                android:icon="@drawable/language"
                android:title="@string/language"/>
        <item
                android:id="@+id/nav_clear"
                android:icon="@mipmap/clear_data"
                android:title="@string/clear"/>

        <item
                android:id="@+id/nav_exit"
                android:icon="@mipmap/exit_app"
                android:title="@string/exit"/>
    </group>
</menu>