<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawlayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corner_border"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/mainmenus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/mr"
                        android:padding="10dp"
                        android:text="@string/master"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_18sdp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="#FFFFFF">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/total_items"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/master_itm"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:text="1000"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/total_qty"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"

                            />

                        <TextView
                            android:id="@+id/master_qty"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:text="10000"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/new_item"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"

                            />

                        <TextView
                            android:id="@+id/m_new_itm"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:text="10000"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"

                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corner_border"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/mr"
                        android:padding="10dp"
                        android:text="@string/transaction"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_18sdp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/total_items"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tran_itm"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:text="1000"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/total_qty"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tran_qty"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:text="10000"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text="@string/last_date"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:text=":"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tran_dt"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_16sdp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/colorPrimary"
                android:theme="@style/AppTheme2">

            </com.google.android.material.bottomappbar.BottomAppBar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/export"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imp"
                    app:srcCompat="@drawable/baseline_share_white_24" />

                <ImageView
                    android:id="@+id/clear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/search"
                    app:layout_constraintStart_toEndOf="@+id/search"
                    app:layout_constraintTop_toTopOf="@+id/search"
                    app:srcCompat="@drawable/baseline_grid_white_24" />

                <ImageView
                    android:id="@+id/imp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/clear"
                    app:layout_constraintEnd_toStartOf="@+id/export"
                    app:layout_constraintTop_toTopOf="@+id/clear"
                    app:srcCompat="@drawable/baseline_save_24" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_fab_search_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/barcode"
                app:backgroundTint="@color/colorPrimary"
                app:layout_anchor="@id/bottomAppBar" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout >
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>