<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Counting">

    /* First Layout for Date and Location */
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/md_deep_purple_100"
        android:orientation="vertical">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/date"
                android:textSize="@dimen/_16sdp"
                />
            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_25sdp"
                android:text=":"
                android:textSize="@dimen/_16sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:textSize="@dimen/_16sdp"
                android:id="@+id/txt_date"
                />
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/location"
                android:textSize="@dimen/_16sdp"
                />

            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_25sdp"
                android:text=":"
                android:textSize="@dimen/_16sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:textSize="@dimen/_16sdp"
                android:id="@+id/txt_location"
                />
        </LinearLayout>

    </LinearLayout>
    /* Second Layout for Barcode Scanning */
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/md_deep_purple_100"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style">


            <EditText
                android:id="@+id/edt_id"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/border_style"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:focusedByDefault="true"
                android:hint="Barcode"
                android:textSize="@dimen/_20sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="1"
                android:id="@+id/edt_qty"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/open_sided"
                android:textSize="@dimen/_20sdp"
                />


        </LinearLayout>


    </LinearLayout>

    /* Third Layout for Item Description */

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/md_deep_purple_100"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.8"
                android:text="@string/item_code"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="2.4"
                android:text=":"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/txt_code"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0.8"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.8"
                android:text="@string/description"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="2.4"
                android:text=":"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0.8"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.8"
                android:text="Barcode"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="2.4"
                android:text=":"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/txt_barcode"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0.8"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1.8"
                android:text="price"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="2.4"
                android:text=":"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0.8"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">



            <TextView
                android:id="@+id/txt_tran_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|right"
                android:textSize="@dimen/_50sdp" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|left"
                android:textSize="@dimen/_50sdp" />

            <TextView
                android:id="@+id/txt_master_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|left"
                android:textSize="@dimen/_50sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus"
                android:src="@drawable/ic_minus_24"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/_10sdp"/>

            <Button
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:text = "Update"
                android:id="@+id/update"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/plus"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_24dp"
                android:layout_marginLeft="@dimen/_10sdp"/>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>
